example/error/500.wxml
<mt-error
    type="500"
    traceId="traceId-AAAAAAAAAAA-BBBB">
</mt-error>